--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,12 +37,14 @@ package_add_test(testIterate testIterate.cpp)
 package_add_test(testReverse testReverse.cpp)
 package_add_test(testBytes testBytes.cpp)
 #package_add_test(testBitShift testBitShift.cpp)
+package_add_test(testNBytes testNBytes.cpp)
+package_add_test(testZBytes testZBytes.cpp)
 #package_add_test(testBounded testBounded.cpp)
-#package_add_test(testNBytes testNBytes.cpp)
 #package_add_test(testSign testSign.cpp)
-#package_add_test(testZBytes testZBytes.cpp)
 package_add_test(testN testN.cpp)
 package_add_test(testZ testZ.cpp)
+package_add_test(testBounded testBounded.cpp)
+package_add_test(testSign testSign.cpp)
 package_add_test(testBase58 testBase58.cpp)
 package_add_test(testStringNumbers testStringNumbers.cpp)
 package_add_test(testExtendedEuclidian testExtendedEuclidian.cpp)
@@ -54,3 +56,4 @@ package_add_test(testCircularQueue testCircularQueue.cpp)
 package_add_test(testLog testLog.cpp)
 #package_add_test(testRateLimiter testRateLimiter.cpp)
 #package_add_test(testNetworking testNetworking.cpp)
+
